colocando arquivos em pasta

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-Br">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Pagina Inicial</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
-
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
+  <h1>Bem-vindo ao meu site!</h1>
 
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="view/sobre.html">Sobre</a>
+    <a href="view"/contato.html">contato</a>
+  </nav>
+
+<p>Esse é um site criado como projeto da aula.</p>
+
+  <button onclick="mostrarmensagem()">clique aqui</button>
+
+  <script src="controle/script.js"></script>
+</body>
 </html>
