--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <a href="index.html">Inicio</a>
     <a href="view/sobre.html">Sobre</a>
-    <a href="view"/contato.html">contato</a>
+    <a href="view/contato.html">contato</a>
   </nav>
 
 <p>Esse é um site criado como projeto da aula.</p>
